After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678992 - WindowTracker: fix ref counting bug in get_app_for_window()
WindowTracker: fix ref counting bug in get_app_for_window()
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-06-27 17:15 UTC by Giovanni Campagna
Modified: 2012-06-27 17:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
WindowTracker: fix ref counting bug in get_app_for_window() (1.05 KB, patch)
2012-06-27 17:15 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-06-27 17:15:45 UTC
get_app_for_window() is (transfer full), but shell_app_system_lookup_wmclass()
is (transfer none), so we must reference the result, or crash
occur.
Comment 1 Giovanni Campagna 2012-06-27 17:15:47 UTC
Created attachment 217430 [details] [review]
WindowTracker: fix ref counting bug in get_app_for_window()
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-06-27 17:23:58 UTC
Review of attachment 217430 [details] [review]:

Sure.
Comment 3 Giovanni Campagna 2012-06-27 17:31:43 UTC
Attachment 217430 [details] pushed as a1bb0ec - WindowTracker: fix ref counting bug in get_app_for_window()