src/shell-window-tracker.c
@@ -299,7 +299,7 @@ get_app_for_window (ShellWindowTracker    *tracker,
   result = shell_app_system_lookup_wmclass (app_system,
                                             meta_window_get_wm_class (window));
   if (result != NULL)
-    return result;
+    return g_object_ref (result);
 
   result = get_app_from_window_pid (tracker, window);
   if (result != NULL)
